--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  code4cx
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-architect
 plugins:
   - jekyll-feed
 
